# LogReader1

./: .gitignore  PLAN.md  README.md  SPEC.md  pyproject.toml
.github/: copilot-instructions.md
docs/: design-augment.md  design-drive-analysis.md  design-hard-hits.md  design-intake-analysis.md  design-launch-counter.md  design-log-correlation.md  design-loop-overruns.md  design-match-phases.md  design-pose-analysis.md  design-signal-gaps.md  design-vision-analysis.md
scripts/: analyze_practice_overruns.py  augment_botpose.py  backtest_var_alpha.py  camera_accuracy_compare.py  camera_accuracy_drilldown.py  camera_compare_q113.py  camera_pose_calibration.py  check_json.py  cross_match_ar_validation.py  datalog_pause_analysis.py  datarate_analysis.py  diagnose_drivestate.py  dslog_overrun_batch.py  e12_deep_dive.py  feeder_motor_health.py  find_motor30.py  find_timestamps.py  flywheel_decline_analysis.py  flywheel_decline_probe.py  flywheel_decline_v2.py  flywheel_distance_check.py  flywheel_hood_battery.py  flywheel_mm_vs_vv.py  flywheel_motor_analysis.py  flywheel_pid_voltage.py  flywheel_signal_probe2.py  flywheel_single_log_v2.py  flywheel_velocity_distribution.py  fuel_throughput_analysis.py  heading_drift_235325.py  inspect_drivestate.py  inspect_struct_vals.py  investigate_flywheel_21.py  investigate_hoot_motor21.py  investigate_hoot_motor21_v2.py  investigate_hoot_scan.py  investigate_prior_hoot.py  investigate_prior_sessions.py  launch_cross_match.py  launch_motor_analysis.py  (+28 more)
tests/: test_analyzers.py  test_dslog_reader.py  test_hard_hits.py  test_models.py  (+8 more)
(+22 files in other folders)
